--- a/keyhunt/keyhunt.css
+++ b/keyhunt/keyhunt.css
@@ -4,7 +4,8 @@ body {
 	background: #000000 url("assets/bg_omori.png") repeat right top;
 	color: white;
 	text-align: center;
-	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif"
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
+	font-size: 16px;
 }
 
 h1 {
@@ -19,12 +20,17 @@ p {
 	font-size: 125%;
 }
 
-a {
-	color: deepskyblue;
+ul {
+	text-align: left;
+	font-size: 18px;
+}
+
+li {
+	padding-top: 4px;
 }
 
 button {
-	background-color: #000000;
+	background-color: #000;
 	border: 2px solid white;
 	color: white;
 	padding: 12px 16px;
@@ -37,5 +43,61 @@ button {
 }
 
 button:hover {
-	background-color: #666666;
+	background-color: #444;
+}
+
+a {
+	transition-duration: 0.1s;
+}
+
+a:link {
+	color: lightskyblue;
+}
+
+a:visited {
+	color: purple;
+}
+
+a:hover {
+	color: dodgerblue;
+}
+
+a:active {
+	color: blue;
+}
+
+ul.navBar {
+	list-style-type: none;
+	margin: 0;
+}
+
+ul.navBar li {
+	padding-top: 0;
+}
+
+ul.navBar li a {
+	background-color: rgba(255,255,255,0);
+	border: 2px solid white;
+	padding: 8px 12px;
+	text-align: center;
+	text-decoration: none;
+	font-size: 16px;
+	transition-duration: 0.2s;
+	display: block;
+}
+
+ul.navBar li a:hover {
+	background-color: rgba(255,255,255,.25);
+}
+
+ul.navBar li a:active {
+	background-color: rgba(255,255,255,.5);
+}
+
+ul.navBar li a.current {
+	background-color: #fff;
+	color: blue;
+	font-weight: bold;
+	padding: 6px 12px;
+	border: 4px solid gold;
 }
