--- a/keyhunt/keyhunt.css
+++ b/keyhunt/keyhunt.css
@@ -1,7 +1,7 @@
 /* CSS Document */
 
 body {
-	background: #000000 url("assets/bg_omori.png") repeat right top;
+	background: #000000 url("assets/bg_omori.png") repeat left top;
 	color: white;
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
 	font-size: 16px;
@@ -16,6 +16,10 @@ h2 {
 	font-size: 200%;
 }
 
+h3 {
+	font-size: 150%;
+}
+
 p {
 	font-size: 125%;
 }
@@ -26,7 +30,8 @@ ul {
 }
 
 li {
-	padding-top: 4px;
+	font-size: 125%;
+	margin-top: 16px;
 }
 
 button {
@@ -75,11 +80,13 @@ ul.navBar {
 	position: fixed;	
 	top: 0;
 	width: 100%;
-	display: inline-block;
+	display: block;
 }
 
 ul.navBar li {
 	float: left;
+	padding: 0;
+	margin: 0;
 }
 
 ul.navBar li a {
@@ -88,6 +95,8 @@ ul.navBar li a {
 	text-align: center;
 	padding: 14px 16px;
 	text-decoration: none;
+	font-size: 90%;
+	margin: 0;
 }
 
 ul.navBar li a:hover {
