--- a/keyhunt/af23.css
+++ b/keyhunt/af23.css
@@ -1,8 +1,8 @@
 /* CSS Document */
 
 body {
-	background: #000000 url("assets/bg_omori.png") repeat left top;
-	color: white;
+	background: #fff url("assets/bg_af23.png") repeat left top;
+	color: black;
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
 	font-size: 16px;
 	margin-left: 0;
