--- a/keyhunt/keyhunt.css
+++ b/keyhunt/keyhunt.css
@@ -1,5 +1,3 @@
-/* CSS Document */
-
 body {
 	background: #000000 url("assets/bg_omori.png") repeat left top;
 	color: white;
@@ -27,6 +25,11 @@ p {
 ul {
 	text-align: left;
 	font-size: 18px;
+}
+
+ol {
+	text-align: left;
+	font-size: 16px;
 }
 
 li {
@@ -103,8 +106,20 @@ ul.navBar li a.current {
 }
 
 :target::before {
-  content: "";
-  display: block;
-  height: 50px; /* fixed header height*/
-  margin: -50px 0 0; /* negative fixed header height */
+	content: "";
+	display: block;
+	height: 50px;
+	margin: -50px 0 0;
+}
+
+.dropdown-content {
+	display: none;
+	position: fixed;
+	background-color: #000;
+	min-width: 160px;
+	z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+	display: block;
 }
