--- a/keyhunt/keyhunt-1.1.css
+++ b/keyhunt/keyhunt-1.1.css
@@ -1,44 +1,9 @@
 body {
-	color: black;
+	background: #000000 url("assets/bg_omori.png") repeat left top;
+	color: white;
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
 	font-size: 16px;
 	margin-left: 0;
-}
-
-.scrolling_bg {
-	background: #fff0 url("assets/bg_heaven3.png") repeat left top;
-	animation: slide 30s linear infinite;
-	width: 200vw;
-	height: 200vh;
-	position: fixed;
-	z-index: -100;
-}
-
-@keyframes slide {
-	0% {
-		transform: translate3d(-960px, -540px, 0);
-	}
-	100% {
-		transform: translate3d(0, 0, 0);
-	}
-}
-
-.scrolling_bg2 {
-	background: #fff url("assets/bg_heaven4.png") repeat left top;
-	animation: slide2 10s linear infinite;
-	width: 200vw;
-	height: 200vh;
-	position: fixed;
-	z-index: -200;
-}
-
-@keyframes slide2 {
-	0% {
-		transform: translate3d(-960px, 0px, 0);
-	}
-	100% {
-		transform: translate3d(0, 0, 0);
-	}
 }
 
 h1 {
@@ -84,7 +49,7 @@ a {
 }
 
 a:link {
-	color: dodgerblue;
+	color: lightskyblue;
 }
 
 a:visited {
@@ -92,7 +57,7 @@ a:visited {
 }
 
 a:hover {
-	color: cyan;
+	color: dodgerblue;
 }
 
 a:active {
