major changes to other

--- a/keyhunt/other-1.2.css
+++ b/keyhunt/other-1.2.css
@@ -41,6 +41,24 @@ body {
 	}
 }
 
+.crustavo {
+	width: 128px;
+	height: 100px;
+}
+
+.crustavo:hover .crustavo2 {
+	display: none;
+}
+
+.crustavo .crustavo3 {
+	display: none;
+	margin-top: -8px;
+}
+
+.crustavo:hover .crustavo3 {
+	display: inline;
+}
+
 h1 {
 	font-size: 300%;
 }
